--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to my App</h1>
-<p>Sign up here</p>
+<p>Sign up <%= link_to 'here', '#' %></p>
 <p>Find me in app/views/pages/home.html.erb</p>
