--- a/app/views/pages/testpage.html.erb
+++ b/app/views/pages/testpage.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#testpage</h1>
+<h1>This is a testpage</h1>
+<p>This page is simply here for repetition</p>
 <p>Find me in app/views/pages/testpage.html.erb</p>
