added bootstrap and navbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>Welcome to my App</h1>
-<p>Sign up <%= link_to 'here', '#' %></p>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron">
+  <h1>Welcome to my App</h1>
+  <p>Come on, you know you wanna <%= link_to 'Sign Up', '#', class: "btn btn-primary btn-lg" %></p>
+  <p>Find me in app/views/pages/home.html.erb</p>
+</div>
