--- a/app/assets/stylesheets/boostrap_and_customization.css.scss
+++ b/app/assets/stylesheets/boostrap_and_customization.css.scss
@@ -1,1 +1,6 @@
+$body-bg:  #2980b9;
+$navbar-inverse-bg:  #27ae60;
+$navbar-inverse-link-color:  #ecf0f1;
+$jumbotron-bg:  #bdc3c7;
+
 @import 'bootstrap';
