--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 <!--<%= link_to 'Fun', fun_path %>-->
 <!--<%= link_to 'Testpage', testpage_path %>-->
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse navbar-default">
 <!--<nav class="navbar navbar-default">-->
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
