--- a/app/views/pages/fun.html.erb
+++ b/app/views/pages/fun.html.erb
@@ -1,2 +1,33 @@
-<h1>This is my fun page</h1>
-<p>Pending future work</p>
+<div class="page-header">
+  <h1>This is a fun page <small>Pending future work</small></h1>
+</div>
+
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <%= image_tag "snow-sagano-kyoto-japan.jpg" %>
+    </a>
+    <div class="caption">
+      <h3>Panda Winter</h3>
+      <p>a.k.a. ZenPayroll in Denver</p>
+    </div>
+  </div>
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <%= image_tag "erin.jpg" %>
+    </a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <%= image_tag "erin2.jpg" %>
+    </a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <%= image_tag "motoLove.jpg" %>
+    </a>
+    <div class="caption">
+      <h3>^^ It's true</h3>
+    </div>
+  </div>
+</div>
