modify home page welcome

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>Welcome to my App</h1>
+  <h1>Bienvenido aqui</h1>
   <p>Come on, you know you wanna <%= link_to 'Sign Up', '#', class: "btn btn-primary btn-lg" %></p>
   <p>Find me in app/views/pages/home.html.erb</p>
 </div>
