modify more like pinterest

--- a/app/views/pages/fun.html.erb
+++ b/app/views/pages/fun.html.erb
@@ -8,8 +8,8 @@
       <%= image_tag "snow-sagano-kyoto-japan.jpg" %>
     </a>
     <div class="caption">
-      <h3>Panda Winter</h3>
-      <p>a.k.a. ZenPayroll in Denver</p>
+      <h3 class="center">Panda Winter</h3>
+      <p class="center">a.k.a. ZenPayroll in Denver</p>
     </div>
   </div>
   <div class="col-xs-6 col-md-3">
@@ -27,7 +27,7 @@
       <%= image_tag "motoLove.jpg" %>
     </a>
     <div class="caption">
-      <h3>^^ It's true</h3>
+      <h3 class="center">^^ It's true</h3>
     </div>
   </div>
 </div>
