--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,8 @@
 <div class="jumbotron">
-  <h1>Bienvenido aqui</h1>
-  <p>Come on, you know you wanna <%= link_to 'Sign Up', '#', class: "btn btn-primary btn-lg" %></p>
-  <p>Find me in app/views/pages/home.html.erb</p>
+  <h1 class="center">Bienvenido aqui</h1>
+  <p class="center">You know you wanna</br>
+    <%= link_to 'Sign In', '#', class: "btn btn-default btn-lg" %>
+    <%= link_to 'Sign Up', '#', class: "btn btn-primary btn-lg" %>
+  </p>
+  <p class="center">Find me in app/views/pages/home.html.erb</p>
 </div>
