--- a/app/assets/stylesheets/boostrap_and_customization.css.scss
+++ b/app/assets/stylesheets/boostrap_and_customization.css.scss
@@ -1,7 +1,18 @@
+@import url(https://fonts.googleapis.com/css?family=Lobster);
+
 $body-bg:  #2980b9;
+$font-family-sans-serif:  'Lobster', 'Helvetica Neue', 'Helvetica';
 $navbar-inverse-bg:  #27ae60;
+$navbar-height:  45px;
 $navbar-inverse-link-color:  #ecf0f1;
 $jumbotron-bg:  #bdc3c7;
 
-@import 'bootstrap-sprockets';
 @import 'bootstrap';
+
+.center {
+  text-align: center;
+}
+
+.navbar-brand {
+  font-weight: bold;
+}
