--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-inverse navbar-default">
 <!--<nav class="navbar navbar-default">-->
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -8,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Pinteresting</a>
+      <%= link_to 'Pinteresting', root_path, class: "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -21,4 +22,5 @@
         <li><%= link_to 'Test', testpage_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
+  </div><!-- /.container -->
 </nav>
