--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,11 @@
         <li><%= link_to 'Contact Me', contact_path %></li>
         <li><%= link_to 'Fun', fun_path %></li>
         <li><%= link_to 'Test', testpage_path %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+          <% else %>
+           <li><%= link_to 'Sign In', new_user_session_path %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
