--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,13 @@
 <div class="jumbotron">
   <h1 class="center">Bienvenido aqui</h1>
-  <p class="center">You know you wanna</br>
-    <%= link_to 'Sign In', '#', class: "btn btn-default btn-lg" %>
-    <%= link_to 'Sign Up', '#', class: "btn btn-primary btn-lg" %>
-  </p>
+
+  <% if user_signed_in? %>
+    <p class="text-center">You're Here</p>
+    <% else %>
+      <p class="center">You know you wanna</br>
+        <%= link_to 'Sign In', new_user_session_path, class: "btn btn-default btn-lg" %>
+        <%= link_to 'Sign Up', new_user_registration_path, class: "btn btn-primary btn-lg" %>
+      </p>
+  <% end %>
   <p class="center">Find me in app/views/pages/home.html.erb</p>
 </div>
