--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
         <% if user_signed_in? %>
           <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
           <% else %>
-           <li><%= link_to 'Sign In', new_user_session_path %></li>
+           <!--<li><%= link_to 'Sign In', new_user_session_path %></li>-->
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
