auth user for pin modifications

--- a/app/assets/stylesheets/boostrap_and_customization.css.scss
+++ b/app/assets/stylesheets/boostrap_and_customization.css.scss
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Lobster);
 
-$body-bg:  #2980b9;
+$body-bg:  #94bfdc;
 $font-family-sans-serif:  'Lobster', 'Helvetica Neue', 'Helvetica';
 $navbar-inverse-bg:  #27ae60;
 $navbar-height:  45px;
