--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -3,8 +3,11 @@
 <table>
   <thead>
     <tr>
+      <th>Image</th>
       <th>Description</th>
       <th>User</th>
+      <th colspan="3"></th>
+      <th colspan="3"></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,9 +15,10 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
+        <th><%= image_tag pin.image.url(:medium)%></th>
         <td><%= pin.description %></td>
         <td><%= pin.user.email if pin.user %></td>
-        <td><%= link_to 'Show', pin %></td>
+        <td><%= link_to 'Show', pin_path(pin) %></td>
 
         <% if pin.user == current_user %>
           <td> <%= link_to 'Edit', edit_pin_path(pin) %></td>
