--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,7 @@
         <li><%= link_to 'Fun', fun_path %></li>
         <li><%= link_to 'Test', testpage_path %></li>
         <% if user_signed_in? %>
+          <li><%= link_to 'New Pin', new_pin_path %></li>
           <li><%= link_to 'Account Settings', edit_user_registration_path %></li>
           <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
           <% else %>
