--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,14 +1,15 @@
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
     <div class="box panel panel-default">
-      <%= image_tag pin.image.url(:medium)%>
+      <%= link_to image_tag(pin.image.url(:medium)), pin_path(pin) %>
       <div class="panel-body">
-        <%= pin.description %>
-        <%= pin.user.email if pin.user %>
-        <%= link_to 'Show', pin_path(pin) %>
+        <p><%= pin.description %></p>
+        <p><%= pin.user.email if pin.user %></p>
         <% if pin.user == current_user %>
-          <%= link_to 'Edit', edit_pin_path(pin) %>
-          <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <div class="actions">
+            <%= link_to 'Edit', edit_pin_path(pin) %>
+            <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
         <% end %>
       </div>
     </div>
