glyphicon add to new edit destroy

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,8 +20,14 @@
         <li><%= link_to 'Contact Me', contact_path %></li>
         <li><%= link_to 'Fun', fun_path %></li>
         <li><%= link_to 'Test', testpage_path %></li>
+        <li><%= link_to 'Pins', pins_path %></li>
         <% if user_signed_in? %>
-          <li><%= link_to 'New Pin', new_pin_path %></li>
+          <!--<li><%= link_to raw('<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>' 'New Pin'), new_pin_path %></li>-->
+          <li><button style="margin-top: 5px;" type="button" class="btn btn-default">
+            <%= link_to new_pin_path do%>
+              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New Pin
+            <% end %>
+          </button></li>
           <li><%= link_to 'Account Settings', edit_user_registration_path %></li>
           <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
           <% else %>
