--- a/app/assets/stylesheets/boostrap_and_customization.css.scss
+++ b/app/assets/stylesheets/boostrap_and_customization.css.scss
@@ -16,3 +16,8 @@ $jumbotron-bg:  #bdc3c7;
 .navbar-brand {
   font-weight: bold;
 }
+
+// fix for bootstrap glymphicons
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css");
