--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -7,8 +7,12 @@
         <p><%= pin.user.email if pin.user %></p>
         <% if pin.user == current_user %>
           <div class="actions">
-            <%= link_to 'Edit', edit_pin_path(pin) %>
-            <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to edit_pin_path(pin) do%>
+              <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit
+            <% end %>
+            <%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
+              <span class="glyphicon glyphicon-trash pull-right" aria-hidden="true"></span>
+            <% end %>
           </div>
         <% end %>
       </div>
