--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -10,7 +10,10 @@
         <p><%= @pin.user.email if @pin.user %></p>
 
           <% if @pin.user == current_user %>
-            <%= link_to 'Edit', edit_pin_path(@pin) %>
+            <%= link_to edit_pin_path(@pin) do%>
+              <span class="glyphicon glyphicon-edit"></span>
+              Edit
+            <% end %>
           <% end %>
       </div>
     </div>
