--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -21,3 +21,7 @@
     </div>
   <% end %>
 </div>
+
+<div class="pull-right">
+  <%= will_paginate @pins, renderer: BootstrapPagination::Rails %>
+</div>
